--- a/auth.html
+++ b/auth.html
@@ -10,15 +10,22 @@
   <div class="auth-container">
     <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo" class="logo" />
     <h2>Member Login</h2>
-    <p>Sign in with your OSU email to access premium resources.</p>
+    <p>Sign in with your OSU or Google account.</p>
 
-    <button id="login-btn" class="btn">Sign in with Outlook</button>
+    <div class="login-buttons">
+      <button id="outlook-login" class="btn">Sign in with Outlook</button>
+      <button id="google-login" class="btn">Sign in with Google</button>
+    </div>
+
+    <p id="info-message" style="color: orange; margin-top: 10px;">
+      Only users with <strong>@osu.edu</strong> emails are eligible to purchase premium courses.
+    </p>
     <p id="error-message" style="color:red; margin-top:10px;"></p>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getAuth, signInWithPopup, OAuthProvider } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+    import { getAuth, signInWithPopup, OAuthProvider, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
     import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
     import { firebaseConfig } from "./js/auth.js";
 
@@ -26,37 +33,38 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-    const provider = new OAuthProvider('microsoft.com');
 
-    const loginBtn = document.getElementById('login-btn');
+    const outlookProvider = new OAuthProvider('microsoft.com');
+    const googleProvider = new GoogleAuthProvider();
+
+    const outlookLogin = document.getElementById('outlook-login');
+    const googleLogin = document.getElementById('google-login');
     const errorMessage = document.getElementById('error-message');
 
-    loginBtn.addEventListener('click', async () => {
+    async function handleLogin(provider) {
       try {
         const result = await signInWithPopup(auth, provider);
         const user = result.user;
+        const isOSU = user.email.endsWith("@osu.edu");
 
-        // Restrict to osu.edu emails only
-        if (!user.email.endsWith("@osu.edu")) {
-          errorMessage.textContent = "Access denied. Please use your osu.edu email.";
-          await auth.signOut();
-          return;
-        }
-
-        // Add user to Firestore if not already present
+        // Store basic user info in Firestore
         await setDoc(doc(db, "users", user.uid), {
           name: user.displayName,
           email: user.email,
+          osuStudent: isOSU,
           timestamp: new Date()
         });
 
-        // Redirect to Resources page after successful login
+        // Redirect everyone to resources page after login
         window.location.href = "resources.html";
       } catch (error) {
         console.error(error);
         errorMessage.textContent = "Login failed. Try again.";
       }
-    });
+    }
+
+    outlookLogin.addEventListener('click', () => handleLogin(outlookProvider));
+    googleLogin.addEventListener('click', () => handleLogin(googleProvider));
   </script>
 </body>
 </html>
