--- a/auth.html
+++ b/auth.html
@@ -1,77 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login • OSU Day Traders</title>
+  <title>Account • OSU Day Traders</title>
   <link rel="stylesheet" href="css/style.css"/>
-  <style>
-    .auth-wrap{min-height:70vh;display:grid;place-items:center;padding:2rem 1rem}
-    .card{max-width:520px;width:100%;background:#fff;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.08);padding:1.5rem}
-    .card h1{margin:.25rem 0 0;font-size:1.6rem}
-    .muted{color:#555;margin:.25rem 0 1rem}
-    .btn{display:inline-block;font-weight:800;padding:.8rem 1rem;border-radius:999px;border:0;cursor:pointer;background:#c4122f;color:#fff}
-    .hint{font-size:.9rem;color:#666;margin-top:.75rem}
-  </style>
 </head>
 <body>
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo"/>
+      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo">
       <span>OSU Day Traders</span>
     </a>
-    <nav class="site-nav" aria-label="Main navigation">
+    <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a class="active" href="auth.html">Login</a></li>
+        <li><a href="resources.html">Resources</a></li>
+        <li><a class="active" href="auth.html">Account</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="applications.html">Applications</a></li>
       </ul>
     </nav>
   </header>
 
-  <main class="auth-wrap">
-    <section class="card">
-      <h1>Sign in</h1>
-      <p class="muted">Use Google to continue. Non-OSU users can have accounts, but only <strong>@osu.edu</strong> can buy the paid course.</p>
+  <main class="content narrow">
+    <div class="card">
+      <h1 style="margin-top:0">Account</h1>
+      <p>Sign in to save your profile and manage access. Anyone can create an account. Only <b>@osu.edu</b> emails can purchase the paid course.</p>
 
-      <button id="google-login" class="btn">Sign in with Google</button>
-      <div id="err" class="hint"></div>
-    </section>
+      <button id="google-login" class="auth-btn" style="margin-top:.5rem">Continue with Google</button>
+      <p id="auth-error" class="form-note" style="margin:.75rem 0 0"></p>
+
+      <hr style="margin:1.25rem 0;border:none;border-top:1px solid #eee">
+
+      <div id="whoami" class="form-note"></div>
+      <button id="logout-btn" class="btn btn--dark" style="display:none;margin-top:.5rem">Log out</button>
+    </div>
   </main>
 
   <footer class="site-footer">
     <p>© <span id="year"></span> OSU Day Traders</p>
   </footer>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 
-  <script>document.getElementById("year").textContent = new Date().getFullYear()</script>
-  <script type="module">
-    import { auth, db, googleProvider } from "./js/firebase-init.js";
-    import { signInWithPopup } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-    import { doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-    const btn = document.getElementById("google-login");
-    const err = document.getElementById("err");
-
-    btn.addEventListener("click", async () => {
-      try {
-        const res = await signInWithPopup(auth, googleProvider);
-        const user = res.user;
-        const osu = (user.email || "").toLowerCase().endsWith("@osu.edu");
-
-        await setDoc(doc(db, "users", user.uid), {
-          name: user.displayName || "",
-          email: user.email || "",
-          osuStudent: osu,
-          membershipStatus: "none", // will flip to "active" after Stripe later
-          updatedAt: serverTimestamp()
-        }, { merge: true });
-
-        window.location.href = "resources.html";
-      } catch (e) {
-        console.error(e);
-        err.textContent = "Login failed. Check your popup blocker and try again.";
-      }
-    });
-  </script>
+  <script type="module" src="js/firebase-init.js"></script>
+  <script type="module" src="js/auth-page.js"></script>
 </body>
 </html>
