--- a/resources.html
+++ b/resources.html
@@ -12,16 +12,15 @@
     <img alt="OSU Day Traders Logo" src="assets/images/osu-daytraders-logo.png"/>
     <span>OSU Day Traders</span>
   </a>
-  <nav aria-label="Main navigation" class="site-nav">
-    <button aria-controls="navMenu" aria-expanded="false" class="nav-toggle">☰</button>
-    <ul id="navMenu">
+  <nav class="site-nav">
+    <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="events.html">Events</a></li>
       <li><a class="active" href="resources.html">Resources</a></li>
+      <li><a href="auth.html">Account</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="applications.html">Applications</a></li>
-      <li><button id="logout-btn" style="background:none;border:none;color:#fff;font-weight:800;cursor:pointer;">Logout</button></li>
     </ul>
   </nav>
 </header>
@@ -29,59 +28,35 @@
 <main class="content">
   <h1>Resources</h1>
 
-  <section id="free-resources">
-    <h2>Open Materials</h2>
-    <ul class="cards cards--2">
-      <li class="card">
-        <h3>Trading Playbooks</h3>
-        <p>Opening Range Breakout, VWAP Reclaim, risk frameworks, and review checklists.</p>
-      </li>
-      <li class="card">
-        <h3>Tools</h3>
-        <p>Charting: TradingView / Thinkorswim<br>Paper: Webull / Tastyworks<br>Journal: Notion / Sheets templates</p>
-      </li>
-    </ul>
+  <section>
+    <h2>Free Materials</h2>
+    <div class="card"><h3>Trading Playbooks</h3><p>Core strategies and risk frameworks.</p></div>
   </section>
 
-  <!-- PAID COURSE -->
-  <section id="premium" style="margin-top:2rem;">
+  <section style="margin-top:2rem;">
     <h2>OSU-Only Course: Day Trading Fundamentals</h2>
-    <p>Access limited to verified <strong>@osu.edu</strong> accounts with an active membership.</p>
+    <p id="osu-warning" class="form-note"></p>
 
-    <div id="locked-content" style="text-align:center;padding:2rem;border:2px dashed #bbb;border-radius:12px;background:#f9f9f9;">
-      <p style="font-size:1.1rem;">🔒 This content is locked.</p>
-      <p style="color:#555;">OSU students can subscribe below to unlock the full interactive course.</p>
-      <button id="subscribe-btn" class="btn btn--light" style="margin-top:1rem;">Subscribe with Stripe</button>
+    <div id="locked-content" class="card" style="text-align:center;background:#f9f9f9;">
+      <p>🔒 This content is locked.</p>
+      <p>Only <b>@osu.edu</b> accounts can subscribe to unlock.</p>
+      <button id="subscribe-btn" class="btn btn--light" style="margin-top:1rem;">Subscribe</button>
     </div>
 
-    <div id="unlocked-content" style="display:none;margin-top:1.25rem;">
+    <div id="unlocked-content" style="display:none;margin-top:1rem;">
       <h3>Day 1: Market Foundations</h3>
-      <p>How markets move, order types, platform basics, first trading plan.</p>
-
-      <video width="100%" controls style="border-radius:12px;">
-        <source src="assets/videos/day1.mp4" type="video/mp4"/>
-        Your browser does not support the video tag.
-      </video>
-
-      <h4>Interactive Quiz</h4>
-      <div id="quiz">
-        <!-- quiz will go here later -->
-      </div>
-
-      <h4>Notes & Downloads</h4>
-      <ul>
-        <li><a href="#">Printable trading journal</a></li>
-        <li><a href="#">Checklist template</a></li>
-      </ul>
+      <p>How markets move, order types, platform basics, and your first trading plan.</p>
+      <!-- Put your videos/quizzes here -->
     </div>
   </section>
 </main>
 
 <footer class="site-footer">
-  <p>© 2025 OSU Day Traders</p>
+  <p>© <span id="year"></span> OSU Day Traders</p>
 </footer>
+<script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 
-<script src="js/main.js"></script>
+<script type="module" src="js/firebase-init.js"></script>
 <script type="module" src="js/paywall.js"></script>
 </body>
 </html>
